--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basal Metabolic Rate Calculator</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="./images/favicon.ico" />
   </head>
   <body id="wrapper">
     <div class="topinfo">
